# tictactoe

./: .clang-format  .gitignore  Board.cc  Board.h  Game.cc  Game.h  Player.cc  Player.h  README.md  Symbol.cc  main  main.cc  test  test.cc
.ccls-cache/@@home@hamzah@tictactoe/: @nix@store@h0ip0h6qp7kc2wm7mwjaglkxxbzmjri4-glibc-2.42-51-dev@include@alloca.h.blob  @nix@store@h0ip0h6qp7kc2wm7mwjaglkxxbzmjri4-glibc-2.42-51-dev@include@bits@atomic_wide_counter.h.blob  @nix@store@h0ip0h6qp7kc2wm7mwjaglkxxbzmjri4-glibc-2.42-51-dev@include@bits@byteswap.h.blob  @nix@store@h0ip0h6qp7kc2wm7mwjaglkxxbzmjri4-glibc-2.42-51-dev@include@bits@cpu-set.h.blob  @nix@store@h0ip0h6qp7kc2wm7mwjaglkxxbzmjri4-glibc-2.42-51-dev@include@bits@endian.h.blob  @nix@store@h0ip0h6qp7kc2wm7mwjaglkxxbzmjri4-glibc-2.42-51-dev@include@bits@endianness.h.blob  @nix@store@h0ip0h6qp7kc2wm7mwjaglkxxbzmjri4-glibc-2.42-51-dev@include@bits@errno.h.blob  @nix@store@h0ip0h6qp7kc2wm7mwjaglkxxbzmjri4-glibc-2.42-51-dev@include@bits@floatn-common.h.blob  @nix@store@h0ip0h6qp7kc2wm7mwjaglkxxbzmjri4-glibc-2.42-51-dev@include@bits@floatn.h.blob  @nix@store@h0ip0h6qp7kc2wm7mwjaglkxxbzmjri4-glibc-2.42-51-dev@include@bits@libc-header-start.h.blob  @nix@store@h0ip0h6qp7kc2wm7mwjaglkxxbzmjri4-glibc-2.42-51-dev@include@bits@locale.h.blob  (+198 more)
.ccls-cache/@home@hamzah@tictactoe/: main.cc  main.cc.blob
GUI/: Board.cc  Board.h  CMakeLists.txt  Game.cc  Game.h  Main.qml  Player.cc  Player.h  compile_commands.json  main.cpp  shell.nix
TUI/: Board.cc  CMakeLists.txt  Game.cc  Game.h  Player.h  Symbol.h  shell.nix
